--- a/htlm.html
+++ b/htlm.html
@@ -1,2 +1,58 @@
-Hello worl
-soon
+Задание №1
+by karpblch
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>СЮДА ТЕКСТ</title>
+</head>
+<body>
+    <h1>СЮДА ТЕКСТ</h1><br>
+    <h2>СЮДА ТЕКСТ</h2><br>
+    <h3>СЮДА ТЕКСТ</h3><br>
+    <p>СЮДА ТЕКСТ</p>
+    <img src="СЮДА КАРТИНКУ" alt="СЮДА ТЕКСТ">
+</body>
+</html>
+by karpblch
+Задание №2
+by karpblch
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>СЮДА ТЕКСТ</title>
+    <style>
+        h1{
+            color: ;
+            font-size: ;
+        }
+        h2{
+            color: ;
+            font-size: ;
+        }
+        img{
+            width: ;
+            display: ;
+            margin-left: ;
+            margin-right: ; 
+        }
+    </style>
+</head>
+<body>
+    <h1>СЮДА ТЕКСТ</h1><br>
+    <h2>СЮДА ТЕКСТ</h2><br>
+    <img src="СЮДА КАРТИНКУ" alt="СЮДА ТЕКСТ">
+</body>
+</html>
+by karpblch
+Задание №3
+by karpblch
+soon....
+by karpblch
+Задание №4
+by karpblch
+soon....
+by karpblch
